syntax = "proto3";

option java_multiple_files = true;
option java_package = "paloul.araneae.cluster.protobuf";
option java_outer_classname = "DronesProto";

service DroneService {
  rpc  GetDroneState (stream DroneStateRequest) returns (stream DroneState) {}
  rpc  GetDroneLocation (stream DroneLocationRequest) returns (stream DroneLocation) {}
}

message DroneState {
  int32 health = 1;
  int32 battery = 2;
}

message DroneLocation {
  int32 lat = 1;
  int32 lon = 2;
}

message DroneStateRequest {
  string id = 1;
}

message DroneLocationRequest {
  string id = 1;
}